--- a/admin/terrain.html
+++ b/admin/terrain.html
@@ -88,6 +88,9 @@
           <input type="range" id="brushSizeZ" min="1" max="20" value="5">
           <button id="randomizeBtn">Randomize Terrain</button>
 
+          <label for="showAxes">Show Axes</label>
+          <input type="checkbox" id="showAxes" checked>
+
           <h3>Ground Types</h3>
           <div id="groundTypesList" class="ground-types"></div>
           <label for="groundName">Name</label>
