--- a/admin/terrain.html
+++ b/admin/terrain.html
@@ -1,6 +1,7 @@
 <!-- terrain.html
      Summary: Admin page for managing terrain presets with a direct 3D terrain editor that allows
-              clicking on the surface to sculpt ground types and elevation.
+              clicking on the surface to sculpt ground types and elevation. The 3D view renders
+              automatically whenever a map is created or its size/type is changed.
      Structure: login, navbar with profile menu, sidebar navigation, table of maps with thumbnails
                and an expandable 3D editor featuring camera controls and shading.
      Usage: Visit /admin/terrain.html after logging in to manage terrains and design custom maps. -->
@@ -61,6 +62,7 @@
         <h2>Terrain Editor</h2>
 
         <div id="editorControls">
+          <p class="instructions">Map preview updates automatically when size or terrain type changes.</p>
           <label for="terrainName">Name</label>
           <input id="terrainName" placeholder="Name">
           <label for="terrainType">Terrain Type</label>
@@ -74,7 +76,6 @@
           <input type="number" id="sizeX" min="0.1" step="0.1" value="1">
           <label for="sizeY">Map height (km)</label>
           <input type="number" id="sizeY" min="0.1" step="0.1" value="1">
-          <button id="generateBtn">Generate Grid</button>
 
           <label for="mode">Edit Mode</label>
           <select id="mode">
