--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!-- index.html
-     Summary: Client entry page for Tanks for Nothing.
-     Structure: basic UI with canvas for Three.js rendering and overlay for controls.
-     Usage: Open in browser; click to capture mouse and play. -->
+     Summary: Client entry and lobby page for Tanks for Nothing.
+     Structure: includes lobby selection UI then canvas for Three.js rendering and
+                overlay for controls.
+     Usage: Open in browser, choose nation and tank, then click Join to play. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +12,16 @@
 </head>
 <body>
   <nav id="navbar"><span>Tanks for Nothing</span></nav>
-  <div id="instructions">WASD move | Space brake | Mouse look | C freelook | V camera | Scroll zoom | 1-4 ammo</div>
+  <div id="lobby">
+    <p>Select your nation and tank to join the battle.</p>
+    <label for="nationSelect">Nation:</label>
+    <select id="nationSelect"></select>
+    <label for="tankSelect">Tank:</label>
+    <select id="tankSelect"></select>
+    <button id="joinBtn">Join</button>
+    <div id="lobbyError"></div>
+  </div>
+  <div id="instructions" style="display:none">WASD move | Space brake | Mouse look | C freelook | V camera | Scroll zoom | 1-4 ammo</div>
   <script src="/socket.io/socket.io.js"></script>
   <script
     type="module"
