--- a/admin/tanks.html
+++ b/admin/tanks.html
@@ -39,6 +39,7 @@
       <a href="tanks.html">Tanks</a>
       <a href="ammo.html">Ammo</a>
       <a href="terrain.html">Terrain</a>
+      <a href="users.html">Users</a>
       <a href="settings.html">Game Settings</a>
     </aside>
     <main id="mainContent">
