--- a/admin/tanks.html
+++ b/admin/tanks.html
@@ -100,6 +100,38 @@
           <input id="tankTurretRot" type="range" min="1" max="60" step="1" oninput="document.getElementById('turretRotVal').innerText=this.value">
           <span id="turretRotVal"></span>
         </label>
+        <label>Max Turret Incline (deg)
+          <input id="tankMaxTurretIncline" type="range" min="0" max="50" step="1" oninput="document.getElementById('maxTurretInclineVal').innerText=this.value">
+          <span id="maxTurretInclineVal"></span>
+        </label>
+        <label>Max Turret Decline (deg)
+          <input id="tankMaxTurretDecline" type="range" min="0" max="25" step="1" oninput="document.getElementById('maxTurretDeclineVal').innerText=this.value">
+          <span id="maxTurretDeclineVal"></span>
+        </label>
+        <label>Body Width (m)
+          <input id="tankBodyWidth" type="range" min="1" max="5" step="0.25" oninput="document.getElementById('bodyWidthVal').innerText=this.value">
+          <span id="bodyWidthVal"></span>
+        </label>
+        <label>Body Length (m)
+          <input id="tankBodyLength" type="range" min="1" max="10" step="0.25" oninput="document.getElementById('bodyLengthVal').innerText=this.value">
+          <span id="bodyLengthVal"></span>
+        </label>
+        <label>Body Height (m)
+          <input id="tankBodyHeight" type="range" min="1" max="3" step="0.25" oninput="document.getElementById('bodyHeightVal').innerText=this.value">
+          <span id="bodyHeightVal"></span>
+        </label>
+        <label>Turret Width (m)
+          <input id="tankTurretWidth" type="range" min="1" max="3" step="0.25" oninput="document.getElementById('turretWidthVal').innerText=this.value">
+          <span id="turretWidthVal"></span>
+        </label>
+        <label>Turret Length (m)
+          <input id="tankTurretLength" type="range" min="1" max="5" step="0.25" oninput="document.getElementById('turretLengthVal').innerText=this.value">
+          <span id="turretLengthVal"></span>
+        </label>
+        <label>Turret Height (m)
+          <input id="tankTurretHeight" type="range" min="0.25" max="2" step="0.25" oninput="document.getElementById('turretHeightVal').innerText=this.value">
+          <span id="turretHeightVal"></span>
+        </label>
         <button id="addTankBtn">Add Tank</button>
       </section>
     </main>
