--- a/admin/tanks.html
+++ b/admin/tanks.html
@@ -1,7 +1,9 @@
 <!-- tanks.html
-     Summary: Admin page for creating and editing tanks.
-     Structure: login, navbar with profile menu, sidebar navigation and tank CRUD card.
-     Usage: Visit /admin/tanks.html after logging in. -->
+     Summary: Admin page for creating, listing and editing tanks with live preview.
+     Structure: login, navbar with profile menu, sidebar navigation and tank CRUD card
+                containing a sortable table and a multi-column form grouped into
+                Armament, Survivability, Maneuverability and Dimensions sections.
+     Usage: Visit /admin/tanks.html after logging in to manage tank definitions. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -45,94 +47,132 @@
     <main id="mainContent">
       <section class="card">
         <h2>Tanks</h2>
-        <p class="instructions">Create or edit tanks tied to nations.</p>
-        <div id="tankList"></div>
-        <input id="tankName" placeholder="Name">
-        <select id="tankNation"></select>
-        <label>Battle Rating
-          <input id="tankBR" type="range" min="1" max="10" step="0.1" oninput="document.getElementById('brVal').innerText=this.value">
-          <span id="brVal"></span>
-        </label>
-        <select id="tankClass">
-          <option value="Light/Scout">Light/Scout</option>
-          <option value="Medium/MBT">Medium/MBT</option>
-          <option value="Heavy">Heavy</option>
-        </select>
-        <label>Armour Thickness (mm)
-          <input id="tankArmor" type="range" min="10" max="150" step="1" oninput="document.getElementById('armorVal').innerText=this.value">
-          <span id="armorVal"></span>
-        </label>
-        <label>Main Cannon Caliber (mm)
-          <input id="tankCaliber" type="range" min="20" max="150" step="10" oninput="document.getElementById('caliberVal').innerText=this.value">
-          <span id="caliberVal"></span>
-        </label>
-        <div class="checkbox-group">
-          <label><input type="checkbox" name="tankAmmo" value="HE"> HE</label>
-          <label><input type="checkbox" name="tankAmmo" value="HEAT"> HEAT</label>
-          <label><input type="checkbox" name="tankAmmo" value="AP"> AP</label>
-          <label><input type="checkbox" name="tankAmmo" value="Smoke"> Smoke</label>
-        </div>
-        <label>Crew Count
-          <input id="tankCrew" type="range" min="1" max="10" step="1" oninput="document.getElementById('crewVal').innerText=this.value">
-          <span id="crewVal"></span>
-        </label>
-        <label>Engine Horsepower
-          <input id="tankHP" type="range" min="100" max="1000" step="50" oninput="document.getElementById('hpVal').innerText=this.value">
-          <span id="hpVal"></span>
-        </label>
-        <label>Max Speed (km/h)
-          <input id="tankMaxSpeed" type="range" min="10" max="100" step="1" oninput="document.getElementById('maxSpeedVal').innerText=this.value">
-          <span id="maxSpeedVal"></span>
-        </label>
-        <label>Max Reverse Speed (km/h)
-          <input id="tankMaxReverse" type="range" min="0" max="50" step="0.5" oninput="document.getElementById('maxReverseVal').innerText=this.value">
-          <span id="maxReverseVal"></span>
-        </label>
-        <label>Max Incline (%)
-          <input id="tankIncline" type="range" min="2" max="12" step="1" oninput="document.getElementById('inclineVal').innerText=this.value">
-          <span id="inclineVal"></span>
-        </label>
-        <label>Body Rotation Time (s/360°)
-          <input id="tankBodyRot" type="range" min="1" max="60" step="1" oninput="document.getElementById('bodyRotVal').innerText=this.value">
-          <span id="bodyRotVal"></span>
-        </label>
-        <label>Turret Rotation Time (s/360°)
-          <input id="tankTurretRot" type="range" min="1" max="60" step="1" oninput="document.getElementById('turretRotVal').innerText=this.value">
-          <span id="turretRotVal"></span>
-        </label>
-        <label>Max Turret Incline (deg)
-          <input id="tankMaxTurretIncline" type="range" min="0" max="50" step="1" oninput="document.getElementById('maxTurretInclineVal').innerText=this.value">
-          <span id="maxTurretInclineVal"></span>
-        </label>
-        <label>Max Turret Decline (deg)
-          <input id="tankMaxTurretDecline" type="range" min="0" max="25" step="1" oninput="document.getElementById('maxTurretDeclineVal').innerText=this.value">
-          <span id="maxTurretDeclineVal"></span>
-        </label>
-        <label>Body Width (m)
-          <input id="tankBodyWidth" type="range" min="1" max="5" step="0.25" oninput="document.getElementById('bodyWidthVal').innerText=this.value">
-          <span id="bodyWidthVal"></span>
-        </label>
-        <label>Body Length (m)
-          <input id="tankBodyLength" type="range" min="1" max="10" step="0.25" oninput="document.getElementById('bodyLengthVal').innerText=this.value">
-          <span id="bodyLengthVal"></span>
-        </label>
-        <label>Body Height (m)
-          <input id="tankBodyHeight" type="range" min="1" max="3" step="0.25" oninput="document.getElementById('bodyHeightVal').innerText=this.value">
-          <span id="bodyHeightVal"></span>
-        </label>
-        <label>Turret Width (m)
-          <input id="tankTurretWidth" type="range" min="1" max="3" step="0.25" oninput="document.getElementById('turretWidthVal').innerText=this.value">
-          <span id="turretWidthVal"></span>
-        </label>
-        <label>Turret Length (m)
-          <input id="tankTurretLength" type="range" min="1" max="5" step="0.25" oninput="document.getElementById('turretLengthVal').innerText=this.value">
-          <span id="turretLengthVal"></span>
-        </label>
-        <label>Turret Height (m)
-          <input id="tankTurretHeight" type="range" min="0.25" max="2" step="0.25" oninput="document.getElementById('turretHeightVal').innerText=this.value">
-          <span id="turretHeightVal"></span>
-        </label>
-        <button id="addTankBtn">Add Tank</button>
+        <p class="instructions">Create or edit tanks tied to nations. Click a column header to sort.</p>
+        <table id="tanksTable">
+          <thead>
+            <tr>
+              <th data-sort="name">Name</th>
+              <th data-sort="nation">Nation</th>
+              <th data-sort="br">BR</th>
+              <th data-sort="class">Class</th>
+              <th data-sort="armor">Armor</th>
+              <th data-sort="cannonCaliber">Caliber</th>
+              <th data-sort="crew">Crew</th>
+              <th data-sort="engineHp">HP</th>
+              <th data-sort="maxSpeed">Speed</th>
+              <th data-sort="bodyWidth">Body W</th>
+              <th data-sort="bodyLength">Body L</th>
+              <th data-sort="bodyHeight">Body H</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="tanksTableBody"></tbody>
+        </table>
+        <form id="tankForm">
+          <div class="form-row">
+            <input id="tankName" placeholder="Name" required>
+            <select id="tankNation"></select>
+            <label>Battle Rating
+              <input id="tankBR" type="range" min="1" max="10" step="0.1" oninput="document.getElementById('brVal').innerText=this.value">
+              <span id="brVal"></span>
+            </label>
+            <select id="tankClass">
+              <option value="Light/Scout">Light/Scout</option>
+              <option value="Medium/MBT">Medium/MBT</option>
+              <option value="Heavy">Heavy</option>
+            </select>
+          </div>
+          <div id="tankSections">
+            <fieldset>
+              <legend>Armament</legend>
+              <label>Armour Thickness (mm)
+                <input id="tankArmor" type="range" min="10" max="150" step="1" oninput="document.getElementById('armorVal').innerText=this.value">
+                <span id="armorVal"></span>
+              </label>
+              <label>Main Cannon Caliber (mm)
+                <input id="tankCaliber" type="range" min="20" max="150" step="10" oninput="document.getElementById('caliberVal').innerText=this.value">
+                <span id="caliberVal"></span>
+              </label>
+              <div class="checkbox-group">
+                <label><input type="checkbox" name="tankAmmo" value="HE"> HE</label>
+                <label><input type="checkbox" name="tankAmmo" value="HEAT"> HEAT</label>
+                <label><input type="checkbox" name="tankAmmo" value="AP"> AP</label>
+                <label><input type="checkbox" name="tankAmmo" value="Smoke"> Smoke</label>
+              </div>
+              <label>Turret Rotation Time (s/360°)
+                <input id="tankTurretRot" type="range" min="1" max="60" step="1" oninput="document.getElementById('turretRotVal').innerText=this.value">
+                <span id="turretRotVal"></span>
+              </label>
+              <label>Max Turret Incline (deg)
+                <input id="tankMaxTurretIncline" type="range" min="0" max="50" step="1" oninput="document.getElementById('maxTurretInclineVal').innerText=this.value">
+                <span id="maxTurretInclineVal"></span>
+              </label>
+              <label>Max Turret Decline (deg)
+                <input id="tankMaxTurretDecline" type="range" min="0" max="25" step="1" oninput="document.getElementById('maxTurretDeclineVal').innerText=this.value">
+                <span id="maxTurretDeclineVal"></span>
+              </label>
+            </fieldset>
+            <fieldset>
+              <legend>Survivability</legend>
+              <label>Crew Count
+                <input id="tankCrew" type="range" min="1" max="10" step="1" oninput="document.getElementById('crewVal').innerText=this.value">
+                <span id="crewVal"></span>
+              </label>
+            </fieldset>
+            <fieldset>
+              <legend>Maneuverability</legend>
+              <label>Engine Horsepower
+                <input id="tankHP" type="range" min="100" max="1000" step="50" oninput="document.getElementById('hpVal').innerText=this.value">
+                <span id="hpVal"></span>
+              </label>
+              <label>Max Speed (km/h)
+                <input id="tankMaxSpeed" type="range" min="10" max="100" step="1" oninput="document.getElementById('maxSpeedVal').innerText=this.value">
+                <span id="maxSpeedVal"></span>
+              </label>
+              <label>Max Reverse Speed (km/h)
+                <input id="tankMaxReverse" type="range" min="0" max="50" step="0.5" oninput="document.getElementById('maxReverseVal').innerText=this.value">
+                <span id="maxReverseVal"></span>
+              </label>
+              <label>Max Incline (%)
+                <input id="tankIncline" type="range" min="2" max="12" step="1" oninput="document.getElementById('inclineVal').innerText=this.value">
+                <span id="inclineVal"></span>
+              </label>
+              <label>Body Rotation Time (s/360°)
+                <input id="tankBodyRot" type="range" min="1" max="60" step="1" oninput="document.getElementById('bodyRotVal').innerText=this.value">
+                <span id="bodyRotVal"></span>
+              </label>
+            </fieldset>
+            <fieldset>
+              <legend>Dimensions</legend>
+              <label>Body Width (m)
+                <input id="tankBodyWidth" type="range" min="1" max="5" step="0.25" oninput="updatePreview();document.getElementById('bodyWidthVal').innerText=this.value">
+                <span id="bodyWidthVal"></span>
+              </label>
+              <label>Body Length (m)
+                <input id="tankBodyLength" type="range" min="1" max="10" step="0.25" oninput="updatePreview();document.getElementById('bodyLengthVal').innerText=this.value">
+                <span id="bodyLengthVal"></span>
+              </label>
+              <label>Body Height (m)
+                <input id="tankBodyHeight" type="range" min="1" max="3" step="0.25" oninput="updatePreview();document.getElementById('bodyHeightVal').innerText=this.value">
+                <span id="bodyHeightVal"></span>
+              </label>
+              <label>Turret Width (m)
+                <input id="tankTurretWidth" type="range" min="1" max="3" step="0.25" oninput="updatePreview();document.getElementById('turretWidthVal').innerText=this.value">
+                <span id="turretWidthVal"></span>
+              </label>
+              <label>Turret Length (m)
+                <input id="tankTurretLength" type="range" min="1" max="5" step="0.25" oninput="updatePreview();document.getElementById('turretLengthVal').innerText=this.value">
+                <span id="turretLengthVal"></span>
+              </label>
+              <label>Turret Height (m)
+                <input id="tankTurretHeight" type="range" min="0.25" max="2" step="0.25" oninput="updatePreview();document.getElementById('turretHeightVal').innerText=this.value">
+                <span id="turretHeightVal"></span>
+              </label>
+              <canvas id="tankPreview" width="300" height="150" aria-label="Tank preview"></canvas>
+            </fieldset>
+          </div>
+          <button id="addTankBtn" type="submit">Add Tank</button>
+        </form>
       </section>
     </main>
   </div>
